# OGIT

./: .gitignore  Cargo.toml  build.rs
.claude/: AGENT_LOG.md
NTO/Accounting/attributes/: commercialPartnerCountryCode.ttl  fiscalCountryCode.ttl  isEuMember.ttl  iso3166Alpha2.ttl  productCategoryComplete.ttl  vatRateStandard.ttl
NTO/Accounting/entities/: FiscalJurisdiction.ttl  JournalEntry.ttl
NTO/Accounting/verbs/: hasFiscalCountry.ttl  hasPickingType.ttl  hasProductCategory.ttl
NTO/Healthcare/entities/: Assessment.ttl  Diagnosis.ttl  LabValue.ttl  Medication.ttl  Patient.ttl  Treatment.ttl  Visit.ttl  VitalSign.ttl
NTO/Healthcare/enumerations/: combo_addtreatment.ttl  combo_medication_dailydose.ttl  combo_medication_dose_unit.ttl  combo_medication_interval.ttl  combo_medication_stop_reason.ttl  combo_medication_typ.ttl  combo_spez.ttl
NTO/Medical/: FMA.ttl  MONDO.ttl  RxNorm.ttl  SNOMED.ttl
NTO/Medical/CHEBI/: namespace.ttl
NTO/Medical/DRON/: namespace.ttl
NTO/Medical/HPO/: namespace.ttl
NTO/Medical/ICD10CM/: namespace.ttl
NTO/Medical/LOINC/: namespace.ttl
NTO/Medical/namespaces/: RadLex.ttl
NTO/Medical/sql_mirror/: GlobMailsmtp.ttl  GlobUserRight.ttl  GlobVitalMod.ttl  PatAddexamination.ttl  PatAddtreatment.ttl  PatMedication.ttl  PatSpecialist.ttl  PfAlcohol.ttl  PfAllergy.ttl  PfDiagnosis.ttl  PfDrugs.ttl  PfFormMain.ttl  PfInheritDisease.ttl  PfLaboratoryMain.ttl  PfLaboratoryValues.ttl  PraxisAddexamination.ttl  PraxisAddtreatment.ttl  PraxisExtpraxis.ttl  PraxisGrund.ttl  PraxisLabTemplateMain.ttl  PraxisLicence.ttl  (+4 more)
src/: lib.rs
(+29 files in other folders)
